force-app/main/default/objects/Child__c/Child__c.object-meta.xml
<CustomObject>
    <label>Child</label>
    <nameField>
        <label>Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Childs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>