force-app/main/default/objects/Child__c/fields/infoname__c.field-meta.xml
<CustomField>
    <fullName>infoname__c</fullName>
    <formula>Mother__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>infoname</label>
    <type>Text</type>
</CustomField>