force-app/main/default/objects/Child__c/fields/Mother__c.field-meta.xml
<CustomField>
    <fullName>Mother__c</fullName>
    <inlineHelpText>select parent</inlineHelpText>
    <label>Mother</label>
    <referenceTo>Mother__c</referenceTo>
    <relationshipLabel>Childs</relationshipLabel>
    <relationshipName>Childs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>