force-app/main/default/objects/Child__c/fields/Parent_Age__c.field-meta.xml
<CustomField>
    <fullName>Parent_Age__c</fullName>
    <formula>Mother__r.Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>