force-app/main/default/objects/Child__c/fields/Parent_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Occupation__c</fullName>
    <formula>Mother__r.Occupation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Occupation</label>
    <type>Text</type>
</CustomField>