force-app/main/default/objects/Child__c/fields/Siblings2__c.field-meta.xml
<CustomField>
    <fullName>Siblings2__c</fullName>
    <formula>Mother__r.Childrens__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siblings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>