force-app/main/default/objects/Child__c/listViews/Custom_child_list.listView-meta.xml
<ListView>
    <fullName>Custom_child_list</fullName>
    <columns>NAME</columns>
    <columns>Mother__c</columns>
    <filterScope>Mine</filterScope>
    <label>Custom child list</label>
</ListView>